@@ -6,7 +6,6 @@
 
 use strict;
 use Test::More;
-use POSIX qw/setlocale LC_ALL/;
 
 BEGIN {
   my $tlib = $0;
@@ -24,13 +23,6 @@ if (t::Support::should_skip()) {
 use File::Temp qw(tempfile);
 use File::Path;
 use File::ExtAttr qw(setfattr getfattr delfattr);
-
-# Use the C locale, so all warnings are in the language we are expecting.
-setlocale(LC_ALL, 'C');
-
-# Snaffle away the warnings for later analysis.
-my $warning;
-$SIG{'__WARN__'} = sub { $warning = $_[0] };
 
 my $TESTDIR = ($ENV{ATTR_TEST_DIR} || '.');
 my ($fh, $filename) = tempfile( DIR => $TESTDIR );
@@ -53,14 +45,16 @@ foreach ( $filename, $dirname ) {
 
     #set it
     setfattr($_, "$key", $val, { namespace => 'nonuser' });
-    is ($warning =~ /(Operation not supported|No such file or directory|Attribute not found)/, 1);
+    my $err = int $!;
+    is ($err, $!{EOPNOTSUPP});
 
     #read it back
     is (getfattr($_, "$key", { namespace => 'nonuser' }), undef);
 
     #delete it
     delfattr($_, "$key", { namespace => 'nonuser' });
-    is ($warning =~ /(Operation not supported|No such file or directory|Attribute not found)/, 1);
+    $err = int $!;
+    is ($err, $!{EOPNOTSUPP});
 
     #check that it's gone
     is (getfattr($_, "$key", { namespace => 'nonuser' }), undef);
