@@ -14,5 +14,9 @@ sub should_skip {
   return 0;
 }
 
+# XXX: Write a function to return expected failure case for missing
+# attribute/etc. depending on platform.
+#/(Operation not supported|No such file or directory|Attribute not found)/
+
 1;
 
